--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -1,27 +1,36 @@
 FROM node:alpine AS development
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src
+RUN mkdir app proto
 
-COPY package*.json ./
+COPY package*.json ./app
+COPY ./prisma ./app/prisma
+COPY ./libs ./app/libs
+COPY ./apps/api-gateway/src/proto ./proto
+
+RUN cd app
 RUN yarn
-COPY . .
-RUN yarn build
+COPY . ./app
+RUN yarn build api-gateway
 
 FROM node:alpine AS production
 
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src
+RUN mkdir app proto
 
-COPY package*.json ./
+COPY package*.json ./app
+COPY ./prisma ./app/prisma
+COPY ./libs ./app/libs
+COPY ./apps/api-gateway/src/proto ./proto
 
+RUN cd app
 RUN yarn --only=production
 
-COPY . .
+COPY . ./app
 
-COPY --from=development /usr/src/app/dist ./dist
+COPY --from=development /usr/src/app/dist ./app/dist
 
-COPY ../../../proto/ /usr/src
-
-CMD ["node", "dist/apps/api-gateway/main"]
+# CMD ["node", "dist/apps/api-gateway/main"]
