--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -1,16 +1,15 @@
 FROM node:alpine AS development
 
-WORKDIR /usr/src
-RUN mkdir app proto
+WORKDIR /usr/src/proto
+COPY ./apps/api-gateway/src/proto .
 
-COPY package*.json ./app
-COPY ./prisma ./app/prisma
-COPY ./libs ./app/libs
-COPY ./apps/api-gateway/src/proto ./proto
+WORKDIR /usr/src/app
+COPY ./package*.json .
+COPY ./prisma ./prisma
+COPY ./libs ./libs
 
-RUN cd app
 RUN yarn
-COPY . ./app
+COPY . .
 RUN yarn build api-gateway
 
 FROM node:alpine AS production
@@ -18,19 +17,17 @@ FROM node:alpine AS production
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 
-WORKDIR /usr/src
-RUN mkdir app proto
+WORKDIR /usr/src/proto
+COPY ./apps/api-gateway/src/proto .
 
-COPY package*.json ./app
-COPY ./prisma ./app/prisma
-COPY ./libs ./app/libs
-COPY ./apps/api-gateway/src/proto ./proto
+WORKDIR /usr/src/app
+COPY ./package*.json .
+COPY ./prisma ./prisma
+COPY ./libs ./libs
 
-RUN cd app
 RUN yarn --only=production
 
-COPY . ./app
-
+COPY . .
 COPY --from=development /usr/src/app/dist ./app/dist
 
 # CMD ["node", "dist/apps/api-gateway/main"]
